# deep-learning

./: README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: ci.yml
perceptron/: __init__.py  perceptron.py  readme.md  single-layer.ipynb
tests/perceptron/: test_perceptron.py
