[project]
name = "deep-learning"
version = "0.1.0"
description = "Neural Networks Fundamentals & Modern Architectures"
readme = "README.md"
authors = [{name = "Egbewatt Kokou", email = "kokou.egbewatt@gmail.com"}]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "pytest>=9.0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["perceptron"]

[project.scripts]
tests = "pytest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
testpaths = [
    "tests/perceptron"
]
